<resources>
    <string name="app_name">Neil_HandyHelps</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="Submit">Submit</string>
    <string name="error_while_logging_in">Error while logging in</string>
    <string name="Registration">Registration</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch User</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_full_address">FullAddress</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="choose_as_a">Choose as a</string>
    <string name="this_will_provide_you_a_specific_registration_form">This will provide you a specific registration form</string>
    <string name="homeowner">Homeowner</string>
    <string name="worker">Worker</string>
    <string name="next">Next</string>
    <string name="id">id</string>


</resources>